package Pokemon;

public class Affinity {
}
