package Pokemon.Affinity;

public enum Element 
{
    FIRE,
    EARTH,
    AIR,
    WATER;
}
